<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="#66000000"
        android:orientation="horizontal">
        <!--tools:ignore="UselessParent"-->
        <TextView
            android:id="@+id/exitChartBtn"
            android:text="@string/exit_chart"
            style="@style/ChartControlBarTextStyle"/>
        <TextView
            android:id="@+id/resetChartBtn"
            android:text="@string/resetChart"
            style="@style/ChartControlBarTextStyle"/>
        <TextView
            android:id="@+id/zoomInChartXBtn"
            android:text="@string/zoom_in_chart_x"
            style="@style/ChartControlBarTextStyle"/>
        <TextView
            android:id="@+id/zoomOutChartXBtn"
            android:text="@string/zoom_out_chart_x"
            style="@style/ChartControlBarTextStyle"/>
          <TextView
            android:id="@+id/zoomInChartYBtn"
            android:text="@string/zoom_in_chart_y"
            style="@style/ChartControlBarTextStyle"/>
        <TextView
            android:id="@+id/zoomOutChartYBtn"
            android:text="@string/zoom_out_chart_y"
            style="@style/ChartControlBarTextStyle"/>

    </LinearLayout>
