<com.haoye.preanaware.main.Titlebar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/titlebar_height"
    android:orientation="horizontal"
    android:background="@color/colorTitlebarBackground"
    android:id="@+id/titlebar">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/icon"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:text="@string/menu_bluetooth"
        style="@style/TitlebarTextStyle"/>
    <TextView
        android:text="@string/menu_transmit"
        style="@style/TitlebarTextStyle"/>
    <TextView
        android:text="@string/menu_viewer"
        style="@style/TitlebarTextStyle"/>
    <TextView
        android:layout_weight="1"
        android:text="@string/menu_more"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        style="@style/TitlebarTextStyle"/>
</com.haoye.preanaware.main.Titlebar>
