<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/VernierBaseInfoStyle"
        android:id="@+id/vernierTimeTxtV"
        android:text="@string/time" />
    <TextView
        style="@style/VernierBaseInfoStyle"
        android:id="@+id/vernierPressureTxtV"
        android:text="@string/pressure" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/VernierBaseInfoStyle"
            android:text="@string/index"/>
        <EditText
            android:id="@+id/indexEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#08253e"
            android:minWidth="100dp"
            android:inputType="number"
            android:textColorHint="#28455e"
            android:labelFor="@id/indexEditText"/>
        <TextView
            android:id="@+id/indexConfirmBtn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorFocusableForeground"
            android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>