<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingTop="1dp"
    android:background="#c0c6d8">
    <LinearLayout
        android:id="@+id/msgBarWrap"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorBackground"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/msgBarToggleBtn"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:background="@drawable/bg_bottombar_btn"
            android:src="@android:drawable/ic_menu_more"
            android:contentDescription="@string/app_name"/>
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:scrollbars="none"
            android:layout_weight="5">
            <EditText
                android:id="@+id/sendEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="5dp"
                android:inputType="textMultiLine"
                android:gravity="center_vertical|start"
                android:textSize="@dimen/default_text_size"
                android:textColor="#5f6264"
                android:background="#e9f3f9"
                android:labelFor="@id/sendEditText"/>
        </ScrollView>
        <TextView
            android:id="@+id/addOrSendBtn"
            android:layout_width="0dp"
            android:minWidth="40dp"
            android:maxWidth="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@color/colorFocusableForeground"
            android:textSize="@dimen/default_text_size"
            android:text="@string/send_btn_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ctrlBarWrap"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="6">
        <ImageView
            android:id="@+id/controlBarToggleBtn"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:background="@drawable/bg_bottombar_btn"
            android:src="@android:drawable/ic_menu_more"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/regulateTimeTxtV"
            style="@style/TransmitControlBarTextStyle"
            android:layout_marginStart="1dp"
            android:text="@string/regulateTime"/>
        <TextView
            android:id="@+id/modifyParameterTxtV"
            style="@style/TransmitControlBarTextStyle"
            android:layout_marginStart="1dp"
            android:text="@string/obtain_data"/>

    </LinearLayout>
</FrameLayout>
